# kalman

./: .gitignore  Cargo.toml  LICENSE  README.md  commitlint.config.js  package.json
benches/: BENCHES.md  kalman.rs
src/: errors.rs  kalman.rs  lib.rs
src/tests/: mod.rs  test_kalman.rs
