[package]
name = "kalman"
version = "0.1.0"
edition = "2024"
authors = ["Tia lab"]
description = "Minimal Kalman filters for f64 time series."
readme = "README.md"
license-file = "LICENSE"

[dependencies]
serde = "1.0.228"
serde_derive = "1.0.228"
thiserror = "2.0.17"


[dev-dependencies]
criterion = "0.8.1"


[[bench]]
name = "kalman"
harness = false
